# dungeon-crawler

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  DEVELOPMENT-PLAN.md  MAIN-SPEC.md  NOTICE.md  TASK.md  package-lock.json
backend/: assets.py  image.py  job_queue.py  main.py  pyproject.toml  realtime_dispatch.py  supabase_realtime.py  supabase_storage.py  timing.py  tts.py
backend/campaign/: extraction.py  manager.py  narration.py  outline.py  plot.py  plot_points.py  puzzle_engine.py  puzzles.py  session_handlers.py  storage.py  world_knowledge.py
backend/config/: file_paths.py  llm_models.py  tts.py
backend/llm/: manager.py  ollama.py  openrouter.py
backend/tests/: campaign_builder.py  chatterbox-tts.py  discord.py  image_krea2_turbo_t2i.json  parakeet.py  realtime_signal.py  server.py  tools.py  tts.py  tts_hard.py  whisper.py
backend/world_knowledge/: setting-overview.md  tone-and-style.md
docs/: DECISIONS.md  F01-auth-settings-ai-connectivity.md  F02-character-page-creator.md  F03-adventure-creation-wizard.md  F04-adventure-guide-pipeline-editor.md  F05-lobby-session-lifecycle.md  F06-adventure-page-frontend.md  F07-live-orchestration-core.md  F08-story-loop-system.md  F09-combat-engine-tactical-map.md  F10-social-encounter-system.md  F11-progression-system.md  F12-asset-immersion-pipeline.md  F13-memory-rag.md  F14-full-ai-dm-mode.md  F15-observability-telemetry.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: check-functions.mjs  sync-guide-shared.mjs
supabase/: .gitignore  (+3 more)
(+597 files in other folders)
