[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chatterbox-tts>=0.1.7",
    "discord-py>=2.7.1",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "llvmlite>=0.40.0",
    "numba>=0.57.0",
    "onnx-asr[cpu,hub]>=0.11.0",
    "py-cord[voice]>=2.8.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "setuptools>=70,<81",
    "soundfile>=0.14.0",
    "supabase>=2.31.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
py-cord = { git = "https://github.com/Pycord-Development/pycord.git", branch = "fix/voice-rec-2" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
